--- a/FSxONTAP/FSxONTAP.yaml
+++ b/FSxONTAP/FSxONTAP.yaml
@@ -69,15 +69,15 @@ Parameters:
     Description: Choose the standby Subnet where FSxONTAP file system's network interface will be created
     Type: AWS::EC2::Subnet::Id
   FSxONTAPRouteTable:
-    Description: Choose your preferred route table for FSxONTAP file system
+    Description: Choose your preferred route table for FSxONTAP file system, please key in all the route tables that your compute nodes sit, separated by comma (no space) for multiple entries
     Type: String
   StorageCapacity:
     Default: 1024
     Description: Specify the storage capacity of the file system being created, in gibibytes. Minimum 1024 GiB; Maximum 192 TiB.
     Type: Number
   FSxAllowedCIDR:
-    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
-    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
+    #AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
+    #ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
     Description: Specify the CIDR block that is allowed access to FSx for Windows File Server.
     Type: String
   ThroughputCapacity:
@@ -103,7 +103,7 @@ Parameters:
      AllowedValues: ["UNIX", "NTFS", "MIXED"]
   SvmAdminPassword:
      NoEcho: true
-     Description: The password to use when managing the SVM using the NetApp ONTAP CLI or REST API. If you do not specify a password, you can still use the file system's fsxadmin user to manage the SVM.
+     Description: The password to use when managing the SVM using the NetApp ONTAP CLI or REST API. If you do not specify a password, you can still use the file system's vsadmin user to manage the SVM.
      Type: String
      MinLength: 5
      MaxLength: 40
@@ -255,8 +255,9 @@ Resources:
         DiskIopsConfiguration:
           Mode: AUTOMATIC
         PreferredSubnetId: !Ref Subnet1ID
-        RouteTableIds:
+        RouteTableIds: !Split
           #- !GetAtt FSxONTAPRouteTable.RouteTableId
+          - ","
           - !Ref FSxONTAPRouteTable
         ThroughputCapacity: !Ref ThroughputCapacity
         WeeklyMaintenanceStartTime: !Ref WeeklyMaintenanceTime
@@ -277,7 +278,7 @@ Resources:
     Type: AWS::SecretsManager::Secret
     Properties: 
       Description: FsxAdminPassword
-      Name: FsxAdminPassword
+      Name: !Sub "${AWS::StackName}-FsxAdminPassword"
       SecretString: !Sub '{"username":"fsxadmin","password":${FsxAdminPassword}}'
       Tags:
         - Key: "Name"
@@ -286,7 +287,7 @@ Resources:
     Type: AWS::SecretsManager::Secret
     Properties: 
       Description: SVMAdminPassword
-      Name: SVMAdminPassword
+      Name: !Sub "${AWS::StackName}-SVMAdminPassword"
       SecretString: !Sub '{"username":"vsadmin","password": ${SvmAdminPassword}}'
       Tags:
         - Key: "Name"
